add version display

--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -22,3 +22,6 @@ post_commit_hooks = []
 
 [[tool.bumpversion.files]]
 filename = "README.md"
+
+[[tool.bumpversion.files]]
+filename = "cmd/pipg/main.go"
